# grug-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  error_handling
.github/workflows/: rust.yml
cli_compiler/: Cargo.toml  mod_api.json
cli_compiler/src/: main.rs
examples/cli_example/: main.rs  mod_api.json
examples/fib_naive/: main.rs  mod_api.json
examples/fibonacci/: main.rs
examples/minimal/: main.rs  mod_api.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
gruggers/: Cargo.toml  README.md  build.rs  cargo.toml
gruggers-core/: Cargo.toml  README.md
gruggers-core/src/: ast.rs  backend.rs  error.rs  lib.rs  ntstring.rs  runtime_error.rs  state.rs  types.rs  xar.rs
gruggers/examples/fibonacci/: main.rs  mod_api.json
gruggers/examples/fibonacci/mods/fib_script/: entity-Fib.grug
gruggers/examples/minimal/: main.rs  mod_api.json
gruggers/examples/minimal/mods/goldie/: first-Dog.grug
gruggers/examples/resources/: main.rs  mod_api.json
gruggers/examples/resources/mods/resource_test/: first-Dog.grug
gruggers/src/: arena.rs  ast.rs  cachemap.rs  capi.rs  error.rs  lib.rs  main.rs  mod_api.rs  ntstring.rs  serde.rs  state.rs  types.rs  watcher.rs  xar.rs
gruggers/src/backend/: bytecode.rs  interpreter.rs  mod.rs  stub.rs
gruggers/src/frontend/: mod.rs  parser.rs  tokenizer.rs  type_propagation.rs
gruggers/tests/grug_bench/: main.rs
gruggers/tests/grug_tests/: main.rs
src/: bindings.rs  cachemap.rs  capi.rs  error.rs  frontend.rs  lib.rs  mod_api.rs  ntstring.rs  serde.rs  state.rs  types.rs  xar.rs
(+8 files in other folders)
