[package]
name = "gruggers-core"
version = "0.5.0"
edition = "2024"
authors = ["Nikhil Nathanael Ilango"]
description = "Core types and traits needed for a implementation of the grug language"
repository = "https://github.com/grug-lang/grug-rs"
license = "MIT"

[dependencies]
allocator-api2 = "0.4.0"
