[package]
name = "gruggers"
version = "0.5.3"
edition = "2024"
authors = ["Nikhil Nathanael Ilango"]
description = "rust implementation of the grug language"
repository = "https://github.com/grug-lang/grug-rs"
license = "MIT"
default-run = "grugc"

[lib] 
crate-type = ["cdylib", "lib", "staticlib"]

[[bin]]
name = "grugc"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
allocator-api2 = "0.4.0"
gruggers-core = {version = "0.5", path = "../gruggers-core"}
